# uclatpc_CAD

./: CMakeLists.txt  uclatpc_CAD.cc  vis.mac
UCLA TPC Parts/: ABottomPMT.stl  ABottomPMTCap.stl  AElectrodeSeparationRing.stl  APolyethyleneSheeth.stl  ASteelRing.stl  ATopPMT.stl  ATopPMTCap.stl  BottomPMT.stl  BottomPMTCap.stl  ElectrodeMesh.stl  ElectrodeSeparationRing.stl  PolythelneSheeth.stl  SteelRing.stl  TopPMT.stl  TopPMTCap.stl
include/: DriftElectronInfo.hh  DynamicUserLimits.hh  WIMPElasticProcess.hh  action.hh  construction.hh  detector.hh  electricField.hh  event.hh  generator.hh  nestPart.hh  physics.hh  run.hh  stepping.hh  tracking.hh
src/: action.cc  construction.cc  detector.cc  electricField.cc  event.cc  generator.cc  nestPart.cc  physics.cc  run.cc  stepping.cc  tracking.cc  vis.mac
src/UCLA TPC Parts/: ABottomPMT.stl  ABottomPMTCap.stl  AElectrodeSeparationRing.stl  ASteelRing.stl  ATopPMT.stl  ATopPMTCap.stl
